<resources>

    <string name="app_name">Pet Pet</string>
    <string name="pet_name">Mascote</string>
    <string name="desc1">Este é o seu perfil. \n
        Aqui você confere seu nível e progresso.</string>

    <string name="pet_notification_title_template">%1$s</string>
    <string name="pet_notification_placeholder_text_template">Give your pet some love!</string>

    <string name="test1">Send Notification</string>
    <string name="test2">Send Toast</string>
    <string name="test3">Level Up</string>
    <string name="test4">Home</string>
    <string name="test5">Send Notification</string>
    <string name="test6">Send Notification</string>

    <string name="circle">
M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
C985.464,783.455,780.213,988.707,527.023,988.707
C273.832,988.707,68.5809,783.455,68.5809,530.265
C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
</string>
    <integer name="circle_original_width">1062</integer>
    <integer name="circle_original_height">1062</integer>
    <string name="title_activity_lateral_menu">LateralMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
