<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/testButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_corners"
        android:text="@string/test4"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/testButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_corners"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="@string/test1" />

    <Button
        android:id="@+id/testButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_corners"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="@string/test2" />

    <Button
        android:id="@+id/testButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_corners"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="@string/test3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_corners"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="@string/test5" />
</LinearLayout>